# OpenVR-WKPairDriver

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  build.ps1  quick.ps1  test.ps1
.github/: RELEASE_WORKFLOW.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/release-template/: install.md  please-read.md  what-you-need-to-do.md
.github/scripts/: Generate-ReleaseNotes.ps1  Test-GenerateReleaseNotes.ps1  Test-InstallerRoundTrip.ps1
.github/workflows/: ci.yml  release.yml
cmake/: WKOpenVRModules.cmake
core/src/common/: BugReport.cpp  BugReport.h  CMakeLists.txt  DiagnosticsLog.cpp  HeadMountDriverSynthConfig.h  HostSupervisorBase.cpp  MotionGate.h  PredictionSmoothingMath.h  ProcessPerfLog.cpp  ProcessPerfLog.h  Protocol.h  ProtocolPayloads.h  SmartSmoothingShadowMath.h
core/src/driver/: CMakeLists.txt  DriverModule.h  DriverSynthCompose.h  FeatureFlags.cpp  FeatureFlags.h  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  ServerTrackedDeviceProviderSmartShadow.cpp  ServerTrackedDeviceProviderTransforms.cpp
core/src/overlay/: AdbController.cpp  AdbController.h  AdbSetupWizard.cpp  AdbSetupWizard.h  BugReportUi.cpp  BugReportUi.h  CMakeLists.txt  DevSimulationState.h  DeviceFilters.cpp  DeviceFilters.h  DiscordPresence.cpp  DiscordPresence.h  FeaturePlugin.h  IpcClientBase.cpp  IpcClientBase.h  ManifestRegistration.cpp  ManifestRegistration.h  ModuleToggleUi.cpp  ModuleToggleUi.h  ShellContext.cpp  ShellContext.h  ShellUi.cpp  ShellUi.h  UiControls.cpp  UiControls.h  UiCore.h  UiHelpers.h  UiLayout.cpp  UiLayout.h  UiTables.cpp  UiTables.h  main.cpp
core/src/overlay/testharness/: CMakeLists.txt  HarnessIpcClient.cpp  HarnessIpcClient.h  HarnessScenario.cpp  HarnessScenario.h  InProcessDriverLoader.cpp  InProcessDriverLoader.h  MockPoseSource.cpp  MockPoseSource.h  SandboxStaging.cpp  SandboxStaging.h  Scenario_calibration.cpp  Scenario_captions.cpp  Scenario_facetracking.cpp  Scenario_inputhealth.cpp  Scenario_oscrouter.cpp  Scenario_phantom.cpp  Scenario_smoothing.cpp  SteamVRConflictGuard.cpp  SteamVRConflictGuard.h  TestHarnessRunner.cpp  TestHarnessRunner.h
core/src/overlay/testharness/MockOpenVR/: MockDriverContext.cpp  MockDriverContext.h  MockDriverInput.cpp  MockDriverInput.h  MockProperties.cpp  MockProperties.h  MockServerDriverHost.cpp  MockServerDriverHost.h  MockSettings.cpp  MockSettings.h
install/: installer.nsi
lib/: CMakeLists.txt
modules/calibration/tests/: CMakeLists.txt  boundary_test_helpers.h  stubs.cpp  test_adb_controller.cpp  test_adb_setup_wizard.cpp  test_auto_lock_hysteresis.cpp  test_boundary.cpp  test_calibration_auto_speed.cpp  test_calibration_calc.cpp  test_calibration_pose_sampling.cpp  test_common_helpers.cpp  test_configuration.cpp  test_controller_input.cpp  test_dev_fake_devices.cpp  test_device_filters.cpp  test_driver_synth.cpp  test_geometry_shift_detector.cpp  test_guardian_auto_apply.cpp  test_head_from_tracker_solve.cpp  test_head_mount_panel_logic.cpp  test_head_mount_preview.cpp  test_head_mount_shadow_offset.cpp  test_head_mount_source_guard.cpp  test_head_mount_visibility.cpp  test_motion_gate.cpp  test_motion_recording_retention.cpp  test_prediction_smoothing.cpp  test_protocol.cpp  (+5 more)
modules/facetracking/src/host/: CMakeLists.txt  README.md  WKOpenVR.FaceTracking.sln
modules/facetracking/src/host/WKOpenVR.FaceModuleHost/: AppPaths.cs  HostOptions.cs  OscQueryAdvertiser.cs  Program.cs  WKOpenVR.FaceModuleHost.csproj
modules/facetracking/src/host/WKOpenVR.FaceModuleHost/Logging/: HostLogger.cs
modules/facetracking/src/host/WKOpenVR.FaceModuleHost/Workers/: DiscoveredModule.cs  FrameWriter.cs  HostControlPipeServer.cs  HostStatusWriter.cs  SubprocessManager.cs
modules/facetracking/src/host/WKOpenVR.FaceModuleProcess/: WKOpenVR.FaceModuleProcess.csproj
modules/facetracking/src/host/WKOpenVR.FaceTracking.ModuleSdk/: CommonTypes.cs  ExpressionFrameSink.cs  EyeFrameSink.cs  FaceTrackingModule.cs  ModuleManifest.cs  UnifiedExpression.cs  WKOpenVR.FaceTracking.ModuleSdk.csproj
modules/facetracking/src/host/WKOpenVR.FaceTracking.Registry/: IndexDocument.cs  Manifest.cs  RegistryClient.cs  WKOpenVR.FaceTracking.Registry.csproj
modules/facetracking/src/host/WKOpenVR.FaceTracking.UpstreamRuntime/: UnifiedTracking.cs  Utils.cs  WKOpenVR.FaceTracking.UpstreamRuntime.csproj
modules/facetracking/src/host/WKOpenVR.FaceTracking.UpstreamRuntime/Contracts/Services/: IDispatcherService.cs  ILibManager.cs  IModuleDataService.cs
modules/facetracking/src/host/WKOpenVR.FaceTracking.UpstreamRuntime/Params/Data/: UnifiedData.cs
modules/facetracking/src/host/WKOpenVR.FaceTracking.UpstreamRuntime/Params/Expressions/: UnifiedExpressions.cs
modules/facetracking/src/host/WKOpenVR.FaceTracking.UpstreamRuntime/Sandboxing/: SimpleEventBus.cs  UdpFullDuplex.cs  VrcftPacketDecoder.cs  VrcftSandboxClient.cs  VrcftSandboxServer.cs
modules/facetracking/src/host/WKOpenVR.FaceTracking.UpstreamRuntime/Sandboxing/IPC/: EventInitGetSupported.cs  EventInitPacket.cs  EventLogPacket.cs  EventStatusUpdatePacket.cs  EventTeardownPacket.cs  EventUpdatePacket.cs  HandshakePacket.cs  IpcPacket.cs  PartialPacket.cs  ReplyInitPacket.cs  ReplySupportedPacket.cs  ReplyTeardownPacket.cs  ReplyUpdatePacket.cs
modules/facetracking/src/host/WKOpenVR.FaceTracking.UpstreamRuntime/Types/: ImageData.cs  Vector2.cs  Vector3.cs
modules/facetracking/src/host/WKOpenVR.FaceTracking.VrcftCompat/: BridgeConfig.cs  ExtTrackingModuleAdapter.cs  IExtTrackingModuleLegacy.cs  ReflectingExtTrackingModuleAdapter.cs  ReflectingLegacyBridge.cs  WKOpenVR.FaceTracking.VrcftCompat.csproj
tests/: CMakeLists.txt
tests/download/: FixtureServer.ps1  Run-DownloadTests.ps1
tests/download/lib/: Assert.ps1
tests/e2e/: CMakeLists.txt  e2e_tests.cpp
tests/fixtures/: .gitignore  generate-fixtures.ps1
tests/ui/: CMakeLists.txt  test_bug_report.cpp  test_ui_core.cpp
wiki/: Architecture.md  Build.md  Changelog.md  Home.md  Module-Calibration.md  Module-FaceTracking.md  Protocol.md  README.md  Release-Process.md  _Sidebar.md
(+172 files in other folders)
