cmake_minimum_required(VERSION 3.14)

# Keep test registration in one place. Module-owned unit tests remain beside the
# code they cover, while cross-module scenarios live under this tests/ tree.
add_subdirectory("${CMAKE_SOURCE_DIR}/modules/calibration/tests" "${CMAKE_BINARY_DIR}/tests/calibration")
add_subdirectory("${CMAKE_SOURCE_DIR}/modules/facetracking/tests" "${CMAKE_BINARY_DIR}/tests/facetracking")
add_subdirectory("${CMAKE_SOURCE_DIR}/modules/inputhealth/tests" "${CMAKE_BINARY_DIR}/tests/inputhealth")
add_subdirectory("${CMAKE_SOURCE_DIR}/modules/oscrouter/tests" "${CMAKE_BINARY_DIR}/tests/oscrouter")
add_subdirectory("${CMAKE_SOURCE_DIR}/modules/captions/tests" "${CMAKE_BINARY_DIR}/tests/captions")
add_subdirectory("${CMAKE_SOURCE_DIR}/modules/phantom/tests" "${CMAKE_BINARY_DIR}/tests/phantom")
add_subdirectory(e2e)
