cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(OPENVR_PAIRDRIVER_ROOT ${CMAKE_SOURCE_DIR} CACHE PATH "WKOpenVR checkout" FORCE)
set(OPENVR_PAIR_BUILD_UMBRELLA ON CACHE BOOL "Build feature overlay plugins for OpenVR-Pair" FORCE)

# Feature modules are always present in the monorepo; add unconditionally.
set(OPENVR_PAIR_OVERLAY_FEATURE_LIBS "")
set(OPENVR_PAIR_OVERLAY_DEFINES "")

add_subdirectory("${CMAKE_SOURCE_DIR}/modules/inputhealth/src/overlay" "${CMAKE_BINARY_DIR}/modules/inputhealth-overlay")
list(APPEND OPENVR_PAIR_OVERLAY_FEATURE_LIBS openvr_pair_feature_inputhealth_overlay)
list(APPEND OPENVR_PAIR_OVERLAY_DEFINES OPENVR_PAIR_HAS_INPUTHEALTH_OVERLAY=1)

add_subdirectory("${CMAKE_SOURCE_DIR}/modules/smoothing/src/overlay" "${CMAKE_BINARY_DIR}/modules/smoothing-overlay")
list(APPEND OPENVR_PAIR_OVERLAY_FEATURE_LIBS openvr_pair_feature_smoothing_overlay)
list(APPEND OPENVR_PAIR_OVERLAY_DEFINES OPENVR_PAIR_HAS_SMOOTHING_OVERLAY=1)

add_subdirectory("${CMAKE_SOURCE_DIR}/modules/calibration/src/overlay" "${CMAKE_BINARY_DIR}/modules/calibration-overlay")
list(APPEND OPENVR_PAIR_OVERLAY_FEATURE_LIBS openvr_pair_feature_calibration_overlay)
list(APPEND OPENVR_PAIR_OVERLAY_DEFINES OPENVR_PAIR_HAS_CALIBRATION_OVERLAY=1)

add_subdirectory("${CMAKE_SOURCE_DIR}/modules/facetracking/src/overlay" "${CMAKE_BINARY_DIR}/modules/facetracking-overlay")
list(APPEND OPENVR_PAIR_OVERLAY_FEATURE_LIBS openvr_pair_feature_facetracking_overlay)
list(APPEND OPENVR_PAIR_OVERLAY_DEFINES OPENVR_PAIR_HAS_FACETRACKING_OVERLAY=1)

add_subdirectory("${CMAKE_SOURCE_DIR}/modules/oscrouter/src/overlay" "${CMAKE_BINARY_DIR}/modules/oscrouter-overlay")
list(APPEND OPENVR_PAIR_OVERLAY_FEATURE_LIBS openvr_pair_feature_oscrouter_overlay)
list(APPEND OPENVR_PAIR_OVERLAY_DEFINES OPENVR_PAIR_HAS_OSCROUTER_OVERLAY=1)

add_subdirectory("${CMAKE_SOURCE_DIR}/modules/captions/src/overlay" "${CMAKE_BINARY_DIR}/modules/captions-overlay")
list(APPEND OPENVR_PAIR_OVERLAY_FEATURE_LIBS openvr_pair_feature_captions_overlay)
list(APPEND OPENVR_PAIR_OVERLAY_DEFINES OPENVR_PAIR_HAS_CAPTIONS_OVERLAY=1)

add_subdirectory("${CMAKE_SOURCE_DIR}/modules/phantom/src/overlay" "${CMAKE_BINARY_DIR}/modules/phantom-overlay")
list(APPEND OPENVR_PAIR_OVERLAY_FEATURE_LIBS openvr_pair_feature_phantom_overlay)
list(APPEND OPENVR_PAIR_OVERLAY_DEFINES OPENVR_PAIR_HAS_PHANTOM_OVERLAY=1)

if(WIN32)
	enable_language(RC)
	set(OPENVR_PAIR_RC_SOURCES openvr-pair.rc)
else()
	set(OPENVR_PAIR_RC_SOURCES "")
endif()

add_executable(OpenVRPairOverlay WIN32
	CalibrationAnchor.cpp
	CalibrationAnchor.h
	DeviceFilters.cpp
	DeviceFilters.h
	DiscordPresence.cpp
	DiscordPresence.h
	DiscordPresenceComposer.cpp
	DiscordPresenceComposer.h
	FeaturePlugin.cpp
	FeaturePlugin.h
	IpcClientBase.cpp
	IpcClientBase.h
	ManifestRegistration.cpp
	ManifestRegistration.h
	Migration.cpp
	Migration.h
	ShellContext.cpp
	ShellContext.h
	ShellFooter.cpp
	ShellFooter.h
	Theme.cpp
	Theme.h
	UiHelpers.h
	UpdateNotice.cpp
	UpdateNotice.h
	VrOverlayHost.cpp
	VrOverlayHost.h
	main.cpp
	${OPENVR_PAIR_RC_SOURCES})

set_target_properties(OpenVRPairOverlay PROPERTIES OUTPUT_NAME "WKOpenVR")

target_include_directories(OpenVRPairOverlay PRIVATE
	${CMAKE_CURRENT_LIST_DIR}
	${CMAKE_SOURCE_DIR}/core/src/common
	${CMAKE_SOURCE_DIR}/lib
	${CMAKE_SOURCE_DIR}/lib/openvr/headers
	${CMAKE_SOURCE_DIR}/lib/imgui
	${CMAKE_SOURCE_DIR}/lib/imgui/backends
	${CMAKE_SOURCE_DIR}/lib/implot
	${CMAKE_SOURCE_DIR}/lib/gl3w/include)

target_link_libraries(OpenVRPairOverlay PRIVATE
	openvr_pair_common
	pair_imgui
	pair_implot
	pair_gl3w
	glfw
	opengl32
	shell32
	ole32
	advapi32
	${OPENVR_PAIR_OVERLAY_FEATURE_LIBS}
	pair_discord_rpc)

file(READ "${CMAKE_SOURCE_DIR}/version.txt" OPENVR_PAIR_VERSION_RAW)
string(STRIP "${OPENVR_PAIR_VERSION_RAW}" OPENVR_PAIR_VERSION_STAMP)

target_compile_definitions(OpenVRPairOverlay PRIVATE
	NOMINMAX
	UNICODE
	_UNICODE
	${OPENVR_PAIR_OVERLAY_DEFINES}
	"OPENVR_PAIR_VERSION_STRING=\"${OPENVR_PAIR_VERSION_STAMP}\"")

if(MSVC)
	target_link_options(OpenVRPairOverlay PRIVATE /ENTRY:mainCRTStartup)
endif()

# Stage manifest.vrmanifest next to the umbrella exe so SteamVR can find it
# via the absolute path the exe passes to AddApplicationManifest.
add_custom_command(TARGET OpenVRPairOverlay POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different
		"${CMAKE_CURRENT_LIST_DIR}/manifest.vrmanifest"
		"$<TARGET_FILE_DIR:OpenVRPairOverlay>/manifest.vrmanifest")

# Stage the dashboard-overlay thumbnail next to the exe. VrOverlayHost
# loads it at runtime via SetOverlayFromFile using an exe-relative path.
add_custom_command(TARGET OpenVRPairOverlay POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different
		"${CMAKE_CURRENT_LIST_DIR}/dashboard_icon.png"
		"$<TARGET_FILE_DIR:OpenVRPairOverlay>/dashboard_icon.png")

# Stage the face-module sync script into resources/ next to the exe.
# ModuleSyncRunner looks for it at <exe_dir>/resources/face-module-sync.ps1.
# Source ownership lives with the facetracking module; the deployed resource
# path stays shell-owned because ModuleSyncRunner resolves it next to WKOpenVR.exe.
add_custom_command(TARGET OpenVRPairOverlay POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E make_directory
		"$<TARGET_FILE_DIR:OpenVRPairOverlay>/resources"
	COMMAND ${CMAKE_COMMAND} -E copy_if_different
		"${CMAKE_SOURCE_DIR}/modules/facetracking/src/overlay/face-module-sync.ps1"
		"$<TARGET_FILE_DIR:OpenVRPairOverlay>/resources/face-module-sync.ps1")
